fix top position on mobile

--- a/admin-base/materialize/custom/_workspace.scss
+++ b/admin-base/materialize/custom/_workspace.scss
@@ -1,6 +1,6 @@
 .peregrine-workspace {
 	position: absolute;
-	top: 112px;
+	top: 104px;
 	bottom: 0;
 	left: 0;
 	right: 0;
@@ -271,5 +271,9 @@
 				opacity: 1;
 			}
 		}
+	}
+	/* tablet styles */
+	@media #{$medium-and-up} {
+		top: 112px;
 	}
 }
